# AERO62520_Robotic_Systems_Design_Project

./: .gitignore  README.md
Ans/: README.md
Ans/config/: amcl_params.yaml  nav2_params.yaml  netplan_nuc.yaml  netplan_pi.yaml  slam_toolbox_params.yaml
Ans/docs/: 00_system_setup_progress.md  01_nuc_configuration.md  02_pi_configuration.md  03_sensor_fusion.md  04_slam_mapping.md  05_localization_nav2.md
Ans/launch/: nav2_bringup_launch.py  slam_launch.py
Ans/leo_nav/launch/: slam_toolbox.launch.py
Ans/leo_wfd_simulation/: CMakeLists.txt  package.xml
Ans/leo_wfd_simulation/launch/: simulation.launch.py
Ans/leo_wfd_simulation/worlds/: arena.sdf  room_maze.sdf
Ans/nav2_wavefront_frontier_exploration/: package.xml  setup.cfg  setup.py
Ans/nav2_wavefront_frontier_exploration/config/: nav2_params.yaml  slam_toolbox.yaml
Ans/nav2_wavefront_frontier_exploration/launch/: nav_launch.launch.py
Ans/nav2_wavefront_frontier_exploration/nav2_wavefront_frontier_exploration/: wavefront_frontier.py
Ans/rplidar_ros/launch/: rplidar_a2m12_launch.py
LXZ/: README.md
Lxz/: README.md  real_time_distance_estimate.py
Lxz/Robotic_arm_project/mycobot_moveit_config/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Lxz/Robotic_arm_project/mycobot_moveit_config/config/mycobot_280/: mycobot_280.urdf
Lxz/Robotic_arm_project/mycobot_moveit_config/launch/: move_group.launch.py  test.launch.py
Lxz/dec_pick_test_arm/install/: local_setup.sh  setup.sh
Lxz/dec_pick_test_arm/install/mycobot_trajectory_client/lib/mycobot_trajectory_client/: mycobot_trajectory_client
Lxz/dec_pick_test_arm/install/mycobot_trajectory_client/share/mycobot_trajectory_client/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Lxz/dec_pick_test_arm/src/mycobot_trajectory_client/: setup.cfg  setup.py
Lxz/dec_pick_test_arm/src/mycobot_trajectory_client/mycobot_trajectory_client/: trajectory_client.py
Lxz/dec_pick_test_pc/src/mycobot_trajectory_server/: package.xml  setup.cfg  setup.py
Lxz/dec_pick_test_pc/src/mycobot_trajectory_server/mycobot_trajectory_server/: trajectory_server.py
Lxz/mycobot_280pi_bringup/: package.xml  setup.cfg  setup.py
Lxz/mycobot_280pi_bringup/launch/: bringup_system.launch.py  robot_bringup.launch.py
Lxz/mycobot_280pi_bringup/mycobot_280pi_bringup/: pymycobot_driver.py
Tom/: README.md
WSY/: README.md
Wsy/: README.md
Wsy/state machine/: README.md  ros2_node_architecture.md  state_machine_flow.md
Wsy/state machine/state_machine_package/: CMakeLists.txt  README.md  main_mission2_1.py  package.xml
Wsy/state machine/state_machine_package/action/: ApproachTarget.action  GraspBlock.action  PlaceBlock.action
Wsy/state machine/state_machine_package/robot_mission/: approach_object_node.py  grasp_node.py  main_mission2_1.py  place_node.py  search_object_node.py  vision_node.py
Wsy/state machine/state_machine_package/srv/: DetectBlock.srv  SearchTargets.srv
XY/: README.md
Xy/: README.md
Xy/Xy/: README.md
Xy/ros_nd2/: command.txt  update.txt
Xy/ros_nd2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Xy/ros_nd2/install/color_blob_vision/lib/color_blob_vision/: blob_depth_to_3d  blob_depth_to_3d_raw  color_blob_debug_image  color_blob_detector  color_blob_markers  color_blob_summary
Xy/ros_nd2/install/color_blob_vision/share/color_blob_vision/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Xy/ros_nd2/install/color_blob_vision/share/color_blob_vision/launch/: find_white_bin.launch.py
Xy/ros_nd2/log/: latest_build
Xy/ros_nd2/src/color_blob_vision/: package.xml  setup.py
Xy/ros_nd2/src/color_blob_vision/color_blob_vision/: color_blob_detector.py  color_blob_summary.py
