<?xml version="1.0"?>
<package format="3">
  <name>mycobot_280pi_bringup</name>
  <version>0.1.0</version>
  <description>Bringup for myCobot 280 Pi (drivers, controllers, state publishers)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>mycobot_280pi_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>