<?xml version="1.0"?>
<package format="3">
  <name>robot_mission</name>
  <version>0.0.1</version>
  <description>Mission 2.1 state machine and supporting ROS 2 nodes.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
